# currency_bot

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
bot/: __main__.py
bot/config/: config.py  models.py
bot/locales/: stub.pyi
bot/locales/en/LC_MESSAGES/: txt.ftl
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/src/: routers.py
bot/src/data_stores/cache/: cache.py  cache_keys.py
bot/src/dialogs/: dialog_routers.py  kbd.py
bot/src/dialogs/user_dialogs/: __init__.py  user_dialog_routers.py
bot/src/dialogs/user_dialogs/exchange_dialog/: __init__.py  dialog.py  filters.py  getters.py  handlers.py
bot/src/dialogs/user_dialogs/main_menu_dialog/: __init__.py  dialog.py  getters.py  handlers.py
bot/src/dialogs/user_dialogs/rates_dialog/: __init__.py  dialog.py  getters.py
bot/src/handlers/: command_handlers.py
bot/src/menu/: menu.py
bot/src/middlewares/: cache.py  i18n.py
bot/src/services/: __init__.py  currency_converter.py  xml_parser.py
bot/src/setters/: buttons_setter.py
bot/src/states/: states.py
bot/src/tkq/: tkq.py
bot/src/utils/: enums.py
